fileserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fileserver
  name: fileserver
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: fileserver
  sessionAffinity: None
  type: ClusterIP
